# opengov-sdk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  LLM.txt  README.md  pyproject.toml
.claude/skills/api-endpoint/: SKILL.md
.claude/skills/api-endpoint/references/: openapi-mapping.md  patterns.md  schema-extraction.md
.claude/skills/endpoint-generator/: SKILL.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
docs/: opengov-plc-api.json
docs/agents/: aisp.md  error-spec.md  llm-spec.md  test-spec.md  workflow-spec.md
examples/: pagination_usage.py  record_types_usage.py  retry_configuration.py  usage_example.py
scripts/: start-mock-server.sh
src/opengov_api/: __init__.py  approvals.py  base.py  client.py  demo.py  documents.py  exceptions.py  files.py  inspections.py  locations.py  log_config.py  projects.py  record_types.py  records.py  users.py
src/opengov_api/models/: __init__.py  base.py  documents.py  enums.py  params.py  record_types.py  records.py
tests/: conftest.py  test_base.py  test_client.py  test_common_endpoints.py  test_documents.py  test_exceptions.py  test_infrastructure.py  test_logging.py  test_network_blocking.py  test_record_types.py  test_records.py  test_users.py
tests/integration/: conftest.py  test_endpoints.py
